--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -54,6 +54,22 @@
             </div>
         </section>
         <section class="portfolio-block call-to-action border-bottom">
+            <div class="container">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Search</th>
+                                <th><input type="search"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr></tr>
+                            <tr></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
@@ -71,14 +87,11 @@
                         <thead>
                             <tr>
                                 <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html">View Catalogue</a></th>
-                                <th></th>
+                                <th><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html">Games Soon</a></th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                            </tr>
+                            <tr></tr>
                             <tr>
                                 <td></td>
                                 <td></td>
@@ -175,7 +188,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="[22:40, 4/10/2020] Victoria Space App NASA: https://spaceplace.nasa.gov/magic-windows/en/ [22:40, 4/10/2020] Walter M: "><strong><span style="text-decoration: underline;">ELECTROMAGNETIC SPECTRUM</span></strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce"><a href="[22:40, 4/10/2020] Victoria Space App NASA: https://spaceplace.nasa.gov/magic-windows/en/ [22:40, 4/10/2020] Walter M: " style="font-size: 20px;"><strong><span style="text-decoration: underline;">ELECTROMAGNETIC SPECTRUM</span></strong></a><br></p>
                             </div>
                         </div>
                     </div>
