--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -87,7 +87,7 @@
                         <thead>
                             <tr>
                                 <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html">View Catalogue</a></th>
-                                <th><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html">Games Soon</a></th>
+                                <th><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html">Games Soon</a></th>
                             </tr>
                         </thead>
                         <tbody>
