--- a/eventapi/html/allevents/project.html
+++ b/eventapi/html/allevents/project.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Contact - Brand</title>
+    <title>CV - Brand</title>
     <meta name="description" content="GW EINSTEIN">
     <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="project.html">Project</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC<br></a></li>
@@ -35,13 +35,19 @@
             </div>
         </div>
     </nav>
-    <main class="page contact-page">
-        <section class="portfolio-block contact">
-            <div class="container text-center">
-                <div class="heading">
-                    <h2>GAMES COMING SOON</h2>
+    <main class="page cv-page">
+        <section class="portfolio-block block-intro border-bottom">
+            <div class="container">
+                <div class="about-me">
+                    <p></p>
                 </div>
-            </div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
+            </div>
+            <p><br>We developed an application to organize the information about gravitational waves and other physics topic related to electromagnetic events. It is important for research, but we think and want this to be used in education and observation.
+                It gives you the possibility to find this kind of information in a single site, with origin in several sources. It works as a catalog and also as an information page: information about gravity, gravitational waves, radiation, and others.
+                So if you are a person that knows anything about physics, you can access to this information and have the possibility of studying and understanding it. We would like students and teachers, even children to get in this app and use it as
+                an information site, which is accessible, understandable and easy-going. So we are trying to improve it and to add some images, sounds, videos, and other content that anyone can enjoy and use. We want anybody to be science's thirsty!<br><br></p>
+            <p>It is a very recent topic and it has just begun its study, which makes it a great challenge. Our approach to developing this project is to orient it towards education. <br><br>The tools used for the development are html, javascript, but we
+                created this website and this app so everyone can use it without any problem or previous knowledge.</p><img src="assets/img/900px-Crab_Nebula.jpg"></section>
     </main>
     <footer class="page-footer">
         <div class="container">
