--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -100,6 +100,24 @@
                     </table>
                 </div>
             </div>
+            <section class="portfolio-block photography">
+                <div class="container">
+                    <div class="row no-gutters">
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/GWvisual.jpg" style="width: 372px;height: 307px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/unnamed.jpg" style="height: 309px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rayos-gamma_0.jpg" style="height: 308px;"></a></div>
+                    </div>
+                </div>
+            </section>
+            <section class="portfolio-block photography">
+                <div class="container">
+                    <div class="row no-gutters">
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 372px;height: 307px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/Logo.png" style="height: 308px;"></a></div>
+                    </div>
+                </div>
+            </section>
         </section>
         <section class="portfolio-block skills">
             <div class="container">
