--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -114,7 +114,7 @@
                     <div class="row no-gutters">
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 372px;height: 307px;"></a></div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/Logo.png" style="height: 308px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/Logo.png" style="height: 310px;width: 394px;"></a></div>
                     </div>
                 </div>
             </section>
@@ -125,120 +125,11 @@
                     <h2 data-aos="zoom-out" style="font-family: 'Abril Fatface', cursive;">Special Skills</h2>
                 </div>
                 <h3 class="text-center" data-aos="zoom-out" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
-                <div class="row">
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
-                            <div class="card-body">
-                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 25px;"><a href="https://www.ligo.caltech.edu/page/educational-resources">Educational Resources</a><br></h3>
-                                <p class="card-text">Whether you're a K-12 educator, a parent, or an interested student, you should browse our education web pages. There's something fun and educational here for everyone.<br></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
-                            <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 22px;"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
-                            <div class="card-body" style="font-size: 22px;">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>GRAVITY SPY</strong></a><br></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div class="container">
                 <div class="heading"></div>
-                <div class="row">
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
-                            <div class="card-body">
-                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 20px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong><span style="text-decoration: underline;">LIGO ANDROID</span></strong></a><br></h3>
-                                <p class="card-text"><br></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
-                            <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
-                            <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="LEARN.html"><strong><span style="text-decoration: underline;">LEARN</span></strong></a><strong><span style="text-decoration: underline;">&nbsp;</span></strong><a href="LEARN.html"><strong>GRAVITY</strong></a><br></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
-            <div class="container">
-                <div class="heading"></div>
-                <div class="row">
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
-                            <div class="card-body">
-                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/" style="font-size: 20px;"><br>GRAVITATIONAL WAVES<br></a><br></h3>
-                                <p class="card-text"><br></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
-                            <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 20px;"><strong>SUPERNOVA</strong></a></div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
-                            <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="[22:40, 4/10/2020] Victoria Space App NASA: https://spaceplace.nasa.gov/magic-windows/en/ [22:40, 4/10/2020] Walter M: " style="font-size: 20px;"><strong><span style="text-decoration: underline;">ELECTROMAGNETIC SPECTRUM</span></strong></a><br></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="heading"></div>
-                <div class="row">
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"></div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
-                            <div class="card-body">
-                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://www.ligo.org/sp/science/Publication-GW170817MMA/"><br><strong><span style="text-decoration: underline;">BINARY SYSTEM OF NEUTRON STARS</span></strong><br></a><br></h3>
-                                <p class="card-text"><br></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"></div>
-                            <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><br></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
         </section>
     </main>
     <section class="portfolio-block website gradient">
