--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -121,9 +121,7 @@
         </section>
         <section class="portfolio-block skills">
             <div class="container">
-                <div class="heading">
-                    <h2 data-aos="zoom-out" style="font-family: 'Abril Fatface', cursive;">Special Skills</h2>
-                </div>
+                <div class="heading"></div>
                 <h3 class="text-center" data-aos="zoom-out" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
             </div>
             <div class="container">
