--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -123,7 +123,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="[22:40, 4/10/2020] Victoria Space App NASA: https://spaceplace.nasa.gov/magic-windows/en/ [22:40, 4/10/2020] Walter M: " style="font-size: 20px;"><strong><span style="text-decoration: underline;">ELECTROMAGNETIC SPECTRUM</span></strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 20px;"><strong><span style="text-decoration: underline;">ELECTROMAGNETIC SPECTRUM</span></strong></a><br></p>
                             </div>
                         </div>
                     </div>
