--- a/eventapi/html/allevents/games.html
+++ b/eventapi/html/allevents/games.html
@@ -45,7 +45,7 @@
     </main>
     <footer class="page-footer">
         <div class="container">
-            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div>
+            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
     </footer>
