--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -81,7 +81,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="container">
+            <div class="container text-center"><a class="btn btn-primary" role="button" href="games.html">Download App</a>
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
