--- a/eventapi/html/allevents/catalague.html
+++ b/eventapi/html/allevents/catalague.html
@@ -30,6 +30,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC<br></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
                 </ul>
             </div>
@@ -330,7 +331,7 @@
     </main>
     <footer class="page-footer">
         <div class="container">
-            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div>
+            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
     </footer>
