--- a/eventapi/html/allevents/catalague.html
+++ b/eventapi/html/allevents/catalague.html
@@ -43,290 +43,26 @@
                     <p style="font-family: 'Abril Fatface', cursive;">Catalogue</p>
                 </div>
             </div>
-            <div class="container text-left"><table class="tablesaw" data-tablesaw-sortable="" data-tablesaw-sortable-switch=""
-
-              data-tablesaw-mode="columntoggle" style="width: 940px; height: 1716px;">
-              <thead style="background-color:#ccc;">
-                <tr>
-                  <th scope="col" data-tablesaw-sortable-col="" data-tablesaw-priority="persist">Name</th>
-                  <th scope="col" data-tablesaw-sortable-col="" data-tablesaw-priority="1">Version</th>
-                  <th scope="col" data-tablesaw-sortable-col="" data-tablesaw-priority="3">Description</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td><b><a href="EINSTE814.html">EINSTEIN814</a></b></td>
-                  <td>v1</td>
-                  <td><span style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">A
-                      Gravitational-Wave Transient Catalog of Compact Binary
-                      Mergers Observed by LIGO</span> </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN521</a></b></b></td>
-                  <td>v2</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN520</a></b></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN425</a></b></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN412</a></b></b></td>
-                  <td>v2</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN414</a></b></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN823</a></b></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN818</a></b></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN817</a></b></b></td>
-                  <td>v3</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN817</a></b></b></td>
-                  <td>v2</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN817</a></b></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN814</a></b></b></td>
-                  <td>v3</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN814</a></b></b></td>
-                  <td>v2</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN814</a></b></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><b><a href="EINSTE814.html">EINSTEIN809</a></b></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-confident/GW170729/v1">GW170729</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/170720/v1">170720</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/170705/v1">170705</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/170630/v1">170630</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/170616/v1">170616</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-confident/GW170608/v3">GW170608</a></b></td>
-                  <td>v3</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/O1_O2-Preliminary/GW170608/v2">GW170608</a></b></td>
-                  <td>v2</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/O1_O2-Preliminary/GW170608/v1">GW170608</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/170423/v1">170423</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/170412/v1">170412</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/170405/v1">170405</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/170219/v1">170219</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/170208/v1">170208</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-confident/GW170104/v2">GW170104</a></b></td>
-                  <td>v2</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/O1_O2-Preliminary/GW170104/v1">GW170104</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/161217/v1">161217</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/161202/v1">161202</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-confident/GW151226/v2">GW151226</a></b></td>
-                  <td>v2</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/O1_O2-Preliminary/GW151226/v1">GW151226</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/151116/v1">151116</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-confident/GW151012/v3">GW151012</a></b></td>
-                  <td>v3</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/O1_O2-Preliminary/GW151012/v2">GW151012</a></b></td>
-                  <td>v2</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/O1_O2-Preliminary/GW151012/v1">GW151012</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/151012.2/v1">151012.2</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-marginal/151008/v1">151008</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/GWTC-1-confident/GW150914/v3">GW150914</a></b></td>
-                  <td>v3</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/O1_O2-Preliminary/GW150914/v2">GW150914</a></b></td>
-                  <td>v2</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/O1_O2-Preliminary/GW150914/v1">GW150914</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/Initial_LIGO_Virgo/blind_injection/v1">blind_injection</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b><a href="https://www.gw-openscience.org/eventapi/html/Initial_LIGO_Virgo/GRB051103/v1">GRB051103</a></b></td>
-                  <td>v1</td>
-                  <td><br>
-                  </td>
-                </tr>
-              </tbody>
-            </table></div>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 814</a></th>
+                            <th><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN521</a></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 520</a></td>
+                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 425</a></td>
+                        </tr>
+                        <tr>
+                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 412</a></td>
+                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 414</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
     </main>
     <footer class="page-footer">
