--- a/eventapi/html/allevents/games.html
+++ b/eventapi/html/allevents/games.html
@@ -42,7 +42,8 @@
                 <div class="heading">
                     <h2>GAMES COMING SOON</h2>
                 </div>
-            </div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
+            </div>
+            <div class="container text-center"><button class="btn btn-primary" type="button" style="font-size: 32px;">Play Now</button></div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
     </main>
     <footer class="page-footer">
         <div class="container">
