--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -48,9 +48,9 @@
         <section class="portfolio-block photography">
             <div class="container">
                 <div class="row no-gutters">
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1.jpg" style="width: 372px;height: 307px;"></a></div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/41586_2019_1129_Fig1_HTML.png" style="height: 309px;"></a></div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/d41586-019-00573-4_16480554.jpg" style="height: 308px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1.jpg" style="width: 565px;height: 307px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/41586_2019_1129_Fig1_HTML.png" style="height: 309px;width: 550px;"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/d41586-019-00573-4_16480554.jpg" style="height: 308px;width: 560px;"></a></div>
                 </div>
             </div>
         </section>
@@ -93,18 +93,18 @@
             <section class="portfolio-block photography">
                 <div class="container">
                     <div class="row no-gutters">
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/GWvisual.jpg" style="width: 372px;height: 307px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/GWvisual.jpg" style="width: 568px;height: 307px;"></a></div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/unnamed.jpg" style="height: 309px;"></a></div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rayos-gamma_0.jpg" style="height: 308px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/rayos-gamma_0.jpg" style="height: 308px;width: 561px;"></a></div>
                     </div>
                 </div>
             </section>
             <section class="portfolio-block photography">
                 <div class="container">
                     <div class="row no-gutters">
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 372px;height: 307px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 547px;height: 307px;"></a></div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/Logo.png" style="height: 310px;width: 394px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/Logo.png" style="height: 310px;width: 517px;"></a></div>
                     </div>
                 </div>
             </section>
